--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,14 @@ $RECYCLE.BIN/
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+.project
+.classpath
 
 # Directories potentially created on remote AFP share
+servers
+target
+.settings
+.metadata
 .AppleDB
 .AppleDesktop
 Network Trash Folder
