增加装饰器示例工程
增加装饰器示例工程

--- a/LearningServlet/pom.xml
+++ b/LearningServlet/pom.xml
@@ -39,6 +39,20 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		
+		<!-- freemarker -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.22</version>
+		</dependency>
+
+		<!-- 装饰器 -->
+		<dependency>
+			<groupId>opensymphony</groupId>
+			<artifactId>sitemesh</artifactId>
+			<version>2.4.2</version>
+		</dependency>
 
 	</dependencies>
 	<build>
