--- a/LearningServlet/src/main/webapp/WEB-INF/web.xml
+++ b/LearningServlet/src/main/webapp/WEB-INF/web.xml
@@ -56,16 +56,31 @@
   </servlet-mapping>
   
   <filter>
-  	<description>
-  	test filter</description>
-  	<display-name>TestFilter</display-name>
-  	<filter-name>TestFilter</filter-name>
-  	<filter-class>com.cmcc.sunyiwei.filter.TestFilter</filter-class>
+  	<display-name>First Filter</display-name>
+  	<filter-name>firstFilter</filter-name>
+  	<filter-class>com.cmcc.sunyiwei.filter.FirstFilter</filter-class>
   </filter>
+  
   <filter-mapping>
-  	<filter-name>TestFilter</filter-name>
+  	<filter-name>firstFilter</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <filter>
+  	<display-name>Second Filter</display-name>
+  	<filter-name>secondFilter</filter-name>
+  	<filter-class>com.cmcc.sunyiwei.filter.SecondFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  	<filter-name>secondFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  
+  
+  
+  
   
   <listener>
   	<listener-class>
@@ -79,11 +94,11 @@
   	</listener-class>
   </listener>
   
-  <listener>
+ <!--  <listener>
   	<listener-class>
   		com.cmcc.sunyiwei.listener.SessionListener
   	</listener-class>
-  </listener>
+  </listener> -->
   
   <listener>
   	<listener-class>
@@ -102,4 +117,39 @@
   		com.cmcc.sunyiwei.listener.RequestAttributeListener
   	</listener-class>
   </listener>
+  
+  <filter>
+        <filter-name>sitemesh</filter-name>
+        <filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter
+        </filter-class>
+    </filter>
+    
+     <filter-mapping>
+        <filter-name>sitemesh</filter-name>
+        <url-pattern>/*</url-pattern> 
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>REQUEST</dispatcher> 
+    </filter-mapping>
+  
+  <servlet>
+        <servlet-name>sitemesh-freemarker</servlet-name>
+        <servlet-class>
+            com.opensymphony.module.sitemesh.freemarker.FreemarkerDecoratorServlet
+        </servlet-class>
+        <init-param>
+            <param-name>TemplatePath</param-name>
+            <param-value>/</param-value>
+        </init-param>
+        <init-param>
+            <param-name>default_encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>sitemesh-freemarker</servlet-name>
+        <url-pattern>*.ftl</url-pattern>
+    </servlet-mapping>
+    
+    
 </web-app>
