--- a/LearningServlet/src/main/webapp/WEB-INF/web.xml
+++ b/LearningServlet/src/main/webapp/WEB-INF/web.xml
@@ -67,6 +67,16 @@
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  <filter>
+  	<filter-name>compressFilter</filter-name>
+  	<filter-class>com.cmcc.sunyiwei.filter.CompressFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  	<filter-name>compressFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <listener>
   	<listener-class>
   		com.cmcc.sunyiwei.listener.ContextListener
